--- a/index.html
+++ b/index.html
@@ -4,74 +4,119 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Josephine Huddleston — Portfolio</title>
-  <meta name="description" content="Clean, modern professional portfolio for Josephine Huddleston." />
+  <meta name="description" content="Clean, modern, detailed professional portfolio for Josephine Huddleston." />
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root{
+      /* Base */
       --bg:#ffffff;
       --text:#0f172a;
-      --muted:#64748b;
+      --muted:#475569;
       --border:#e5e7eb;
-      --card:#f8fafc;
+
+      /* Accent palette (soft, controlled use) */
+      --sage-dark:#758467;
+      --sage:#819171;
+      --sage-soft:#9CAF88;
+      --sage-light:#CBD5C0;
+      --sage-xlight:#DFE6DA;
     }
     *{box-sizing:border-box}
+
     body{
       margin:0;
       font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
       background:var(--bg);
       color:var(--text);
-      line-height:1.6;
+      line-height:1.65;
     }
-    a{color:inherit}
 
-    .container{max-width:1080px;margin:48px auto;padding:24px}
+    a{color:var(--sage-dark);text-decoration:none}
+    a:hover{text-decoration:underline}
+
+    .container{max-width:1040px;margin:56px auto;padding:24px}
 
     /* Header */
-    header{display:flex;justify-content:space-between;align-items:center;margin-bottom:56px}
+    header{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding-bottom:24px;
+      border-bottom:1px solid var(--border);
+      margin-bottom:48px
+    }
     .brand{display:flex;gap:16px;align-items:center}
-    .logo{width:52px;height:52px;border-radius:10px;border:1px solid var(--border);display:flex;align-items:center;justify-content:center;font-weight:700}
-    nav a{text-decoration:none;margin-left:24px;font-size:14px;color:var(--muted)}
-    nav a:hover{color:var(--text)}
+    .logo{
+      width:52px;height:52px;border-radius:10px;
+      border:1px solid var(--sage-light);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:700;color:var(--sage-dark)
+    }
+    nav a{margin-left:24px;font-size:14px;color:var(--muted)}
 
-    /* Hero */
-    .hero{display:grid;grid-template-columns:1.5fr 1fr;gap:48px;align-items:start;margin-bottom:64px}
-    h1{font-size:32px;margin:0 0 16px 0;font-weight:700}
-    h2{font-size:24px;margin:0 0 16px 0}
+    /* Typography */
+    h1{font-size:34px;line-height:1.25;margin:0 0 16px 0}
+    h2{font-size:24px;margin:0 0 20px 0}
     h3{font-size:16px;margin:0 0 6px 0}
     p{margin:0 0 16px 0;color:var(--muted)}
 
-    .card{background:var(--card);border:1px solid var(--border);border-radius:12px;padding:24px}
+    /* Hero */
+    .hero{
+      display:grid;
+      grid-template-columns:1.6fr 1fr;
+      gap:56px;
+      margin-bottom:72px
+    }
+    .hero-accent{
+      padding-left:20px;
+      border-left:3px solid var(--sage)
+    }
 
-    .btn{display:inline-block;padding:10px 16px;border-radius:8px;border:1px solid var(--border);background:#fff;text-decoration:none;font-size:14px;font-weight:600;margin-right:12px}
-    .btn:hover{background:#f1f5f9}
+    /* Cards */
+    .card{
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:24px;
+      background:#fff
+    }
+
+    /* Sections */
+    section{margin-bottom:72px}
+
+    /* Selected Work */
+    .work-list{display:grid;gap:20px}
+    .work-item{
+      padding:20px 0;
+      border-bottom:1px solid var(--border)
+    }
+    .work-item:last-child{border-bottom:none}
+    .work-meta{font-size:13px;color:var(--sage-dark);margin-bottom:6px}
+    .work-item p{margin-bottom:8px}
 
     /* Resume */
-    .resume a{display:block;margin-top:12px;font-weight:600;text-decoration:none}
+    .resume{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:40px
+    }
+    .role{margin-bottom:28px}
+    .role-title{font-weight:600}
+    .role-org{color:var(--sage-dark)}
+    ul{margin:8px 0 0 18px;color:var(--muted)}
 
-    /* Work */
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:24px}
-    .work{border:1px solid var(--border);border-radius:12px;overflow:hidden;background:#fff;cursor:pointer}
-    .work img{width:100%;height:160px;object-fit:cover;background:#e5e7eb}
-    .work .meta{padding:16px}
-    .work p{font-size:13px}
+    /* Footer */
+    footer{
+      padding-top:32px;
+      border-top:1px solid var(--border);
+      font-size:13px;color:var(--muted)
+    }
 
-    .filters{display:flex;gap:12px;margin-bottom:24px}
-    .chip{font-size:13px;padding:6px 12px;border-radius:999px;border:1px solid var(--border);background:#fff;cursor:pointer}
-    .chip.active{background:#0f172a;color:#fff}
-
-    /* Modal */
-    .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(15,23,42,0.55)}
-    .modal.open{display:flex}
-    .panel{width:92%;max-width:1100px;height:80vh;background:#fff;border-radius:12px;overflow:hidden}
-    .panel iframe{width:100%;height:100%;border:0}
-    .close{position:absolute;top:24px;right:24px;font-size:14px;border:1px solid var(--border);background:#fff;border-radius:6px;padding:6px 10px;cursor:pointer}
-
-    footer{margin-top:64px;font-size:13px;color:var(--muted)}
-
+    /* Responsive */
     @media (max-width:900px){
       .hero{grid-template-columns:1fr}
+      .resume{grid-template-columns:1fr}
     }
   </style>
 </head>
@@ -83,103 +128,107 @@
         <div class="logo">JH</div>
         <div>
           <div style="font-weight:700">Josephine Huddleston</div>
-          <div style="font-size:13px;color:var(--muted)">Associate Category Program Manager · Austin, TX</div>
+          <div style="font-size:13px;color:var(--muted)">Digital Marketing & Program Management</div>
         </div>
       </div>
       <nav>
         <a href="#work">Work</a>
-        <a href="#about">About</a>
+        <a href="#resume">Resume</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
 
     <section class="hero">
       <div>
-        <h1>Digital marketing & communications portfolio</h1>
-        <p>I specialize in digital asset management, content coordination, and community-driven campaigns. My focus is clarity, consistency, and reliable execution across platforms.</p>
+        <h1>Clear, reliable digital communication that supports community and growth</h1>
+        <p>I work at the intersection of digital marketing, asset management, and project coordination. My strength is bringing structure to creative work—aligning stakeholders, timelines, and brand standards across channels.</p>
+      </div>
+      <div class="hero-accent">
+        <p><strong>Focus areas</strong></p>
+        <p>Digital asset management · Social media coordination · Event communications · Cross-functional project support · Retail & nonprofit marketing</p>
       </div>
     </section>
 
     <section id="work">
       <h2>Selected work</h2>
+      <div class="work-list">
 
-      <div class="filters">
-        <button class="chip active" data-filter="all">All</button>
-        <button class="chip" data-filter="events">Events</button>
-        <button class="chip" data-filter="social">Social</button>
-      </div>
+        <div class="work-item">
+          <div class="work-meta">Event communications & fundraising</div>
+          <h3>Fruits of Faith Gala — St. Elias Antiochian Orthodox Church</h3>
+          <p>Planned and supported digital communications for a large-scale fundraising gala, promoting the church’s capital campaign across web and social channels.</p>
+          <p><a href="https://www.sainteliaschurch.org/post/fruits-of-faith-gala-a-mediterranean-soir%C3%A9e-to-support-the-st-elias-capital-campaign" target="_blank">View event page</a></p>
+        </div>
 
-      <div class="grid">
-        <article class="work" data-type="events" onclick="openModal('https://www.sainteliaschurch.org/post/fruits-of-faith-gala-a-mediterranean-soir%C3%A9e-to-support-the-st-elias-capital-campaign')">
-          <img alt="Fruits of Faith Gala" />
-          <div class="meta">
-            <h3>Fruits of Faith Gala</h3>
-            <p>Event communications and digital promotion for St. Elias capital campaign.</p>
-          </div>
-        </article>
+        <div class="work-item">
+          <div class="work-meta">Community engagement & social media</div>
+          <h3>St. Elias Antiochian Orthodox Church — Facebook</h3>
+          <p>Managed and coordinated social media content to support parish announcements, fundraising efforts, and community engagement.</p>
+          <p><a href="https://www.facebook.com/StEliasAustin/" target="_blank">View Facebook page</a></p>
+        </div>
 
-        <article class="work" data-type="social" onclick="openModal('https://www.facebook.com/StEliasAustin/')">
-          <img alt="St Elias Facebook" />
-          <div class="meta">
-            <h3>St. Elias — Facebook</h3>
-            <p>Community engagement, announcements, and fundraising outreach.</p>
-          </div>
-        </article>
+        <div class="work-item">
+          <div class="work-meta">Student organization leadership & communications</div>
+          <h3>Collegiate Entrepreneurs’ Organization (UIW) — Instagram</h3>
+          <p>Led digital presence for a university entrepreneurship organization, aligning messaging with events, member outreach, and institutional branding.</p>
+          <p><a href="https://www.instagram.com/uiw_ceo/?hl=en" target="_blank">View Instagram profile</a></p>
+        </div>
 
-        <article class="work" data-type="social" onclick="openModal('https://www.instagram.com/uiw_ceo/?hl=en')">
-          <img alt="UIW CEO Instagram" />
-          <div class="meta">
-            <h3>UIW CEO — Instagram</h3>
-            <p>Student organization presence and coordinated social content.</p>
-          </div>
-        </article>
       </div>
     </section>
 
-    <section id="about" style="margin-top:64px">
-      <h2>About</h2>
-      <p>I bring structure to creative work—balancing timelines, stakeholders, and brand standards. My background includes retail marketing support, event communications, and leadership roles in nonprofit and university organizations.</p>
+    <section id="resume">
+      <h2>Professional experience</h2>
+      <div class="resume">
+
+        <div>
+          <div class="role">
+            <div class="role-title">Associate Category Program Manager</div>
+            <div class="role-org">Retail Marketing & Digital Asset Management</div>
+            <ul>
+              <li>Coordinate and maintain large-scale digital asset libraries across retail programs</li>
+              <li>Support cross-functional teams to ensure brand accuracy and on-time execution</li>
+              <li>Manage timelines, content updates, and stakeholder communication</li>
+            </ul>
+          </div>
+
+          <div class="role">
+            <div class="role-title">Vice Chair, Media & Communications</div>
+            <div class="role-org">St. Elias Antiochian Orthodox Church</div>
+            <ul>
+              <li>Lead communications strategy for events, campaigns, and community outreach</li>
+              <li>Oversee social media, announcements, and digital promotion</li>
+            </ul>
+          </div>
+        </div>
+
+        <div>
+          <div class="role">
+            <div class="role-title">President</div>
+            <div class="role-org">Collegiate Entrepreneurs’ Organization (UIW)</div>
+            <ul>
+              <li>Directed organizational strategy, events, and external communications</li>
+              <li>Collaborated with faculty and external partners</li>
+            </ul>
+          </div>
+
+          <p style="margin-top:32px"><a href="/mnt/data/Josephine_s_Resume.pdf" target="_blank"><strong>View full resume (PDF)</strong></a></p>
+        </div>
+
+      </div>
     </section>
 
-    <section id="contact" style="margin-top:64px">
+    <section id="contact">
       <h2>Contact</h2>
-      <p>Available for full‑time roles and collaborative projects.</p>
-      <a class="btn" href="mailto:josephinelhuddleston@gmail.com">Get in touch</a>
+      <p>For professional inquiries or collaboration opportunities:</p>
+      <p><strong>Email:</strong> <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a><br>
+         <strong>Phone:</strong> 979-253-3523</p>
     </section>
 
     <footer>
-      © Josephine Huddleston · Built as a static GitHub Pages site
+      © Josephine Huddleston · Built as a static GitHub Pages portfolio
     </footer>
 
   </div>
-
-  <div id="modal" class="modal">
-    <div class="panel">
-      <button class="close" onclick="closeModal()">Close</button>
-      <iframe id="frame"></iframe>
-    </div>
-  </div>
-
-  <script>
-    function openModal(url){
-      document.getElementById('frame').src = url;
-      document.getElementById('modal').classList.add('open');
-    }
-    function closeModal(){
-      document.getElementById('frame').src = '';
-      document.getElementById('modal').classList.remove('open');
-    }
-
-    document.querySelectorAll('.chip').forEach(c=>{
-      c.addEventListener('click',()=>{
-        document.querySelectorAll('.chip').forEach(x=>x.classList.remove('active'));
-        c.classList.add('active');
-        const f=c.dataset.filter;
-        document.querySelectorAll('.work').forEach(w=>{
-          w.style.display=(f==='all'||w.dataset.type===f)?'block':'none';
-        })
-      })
-    })
-  </script>
 </body>
 </html>
