--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       </div>
       <div class="hero-accent">
         <p><strong>Focus areas</strong></p>
-        <p>Digital asset management · Social media coordination · Event communications · Cross-functional project support · Retail & nonprofit marketing</p>
+        <p>Digital asset management · Social media coordination · Event communications · Cross‑functional project support · Retail & nonprofit marketing</p>
       </div>
     </section>
 
@@ -178,51 +178,23 @@
     </section>
 
     <section id="resume">
-      <h2>Professional experience</h2>
-      <div class="resume">
-
-        <div>
-          <div class="role">
-            <div class="role-title">Associate Category Program Manager</div>
-            <div class="role-org">Retail Marketing & Digital Asset Management</div>
-            <ul>
-              <li>Coordinate and maintain large-scale digital asset libraries across retail programs</li>
-              <li>Support cross-functional teams to ensure brand accuracy and on-time execution</li>
-              <li>Manage timelines, content updates, and stakeholder communication</li>
-            </ul>
-          </div>
-
-          <div class="role">
-            <div class="role-title">Vice Chair, Media & Communications</div>
-            <div class="role-org">St. Elias Antiochian Orthodox Church</div>
-            <ul>
-              <li>Lead communications strategy for events, campaigns, and community outreach</li>
-              <li>Oversee social media, announcements, and digital promotion</li>
-            </ul>
-          </div>
-        </div>
-
-        <div>
-          <div class="role">
-            <div class="role-title">President</div>
-            <div class="role-org">Collegiate Entrepreneurs’ Organization (UIW)</div>
-            <ul>
-              <li>Directed organizational strategy, events, and external communications</li>
-              <li>Collaborated with faculty and external partners</li>
-            </ul>
-          </div>
-
-          <p style="margin-top:32px"><a href="/mnt/data/Josephine_s_Resume.pdf" target="_blank"><strong>View full resume (PDF)</strong></a></p>
-        </div>
-
-      </div>
+      <h2>Resume</h2>
+      <iframe 
+        src="Josephine_s_Resume.pdf"
+        width="100%"
+        height="720"
+        style="border:1px solid var(--border);border-radius:10px">
+      </iframe>
+      <p style="margin-top:16px">
+        <a href="Josephine_s_Resume.pdf" target="_blank"><strong>Download resume (PDF)</strong></a>
+      </p>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
       <p>For professional inquiries or collaboration opportunities:</p>
       <p><strong>Email:</strong> <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a><br>
-         <strong>Phone:</strong> 979-253-3523</p>
+         <strong>Phone:</strong> 979‑253‑3523</p>
     </section>
 
     <footer>
