--- a/index.html
+++ b/index.html
@@ -152,7 +152,37 @@
       </div>
     </section>
 
-    $&
+    
+    <section id="work">
+      <h2>Selected Work</h2>
+      <div class="work-list">
+        <div class="work-item">
+          <h3>Fruits of Faith Gala — Capital Campaign</h3>
+          <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
+          <p>Campaign communications and digital promotion for a large-scale fundraising gala supporting the St. Elias capital campaign.</p>
+          <ul>
+            <li>Coordinated digital content across website, email, and social media</li>
+            <li>Supported visual storytelling and event branding</li>
+            <li>Aligned messaging with leadership and finance teams</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="photography">
+      <h2>Film Photography</h2>
+      <p style="max-width:720px;color:var(--muted);font-size:14px">
+        A small selection of analog photography focused on composition, light, and texture. Film photography informs my visual judgment and attention to detail in professional work.
+      </p>
+      <p style="font-size:13px;color:var(--muted);margin-top:16px;margin-bottom:12px">
+        All images shot on Kodak Ultramax 400 Color Print Film (35mm, 36 exposures).
+      </p>
+      <div class="photo-grid">
+        <img src="photos/photo1.jpg" alt="Film photography sample" />
+        <img src="photos/photo2.jpg" alt="Film photography sample" />
+        <img src="photos/photo3.jpg" alt="Film photography sample" />
+      </div>
+    </section>
 
     
 
