--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       --sage-light:#CBD5C0;
       --sage-xlight:#DFE6DA;
     }
-    *{box-sizing:border-box}
+
+    *{box-sizing:border-box;}
 
     body{
       margin:0;
@@ -30,21 +31,27 @@
       line-height:1.65;
     }
 
-    .container{max-width:1040px;margin:56px auto;padding:24px;position:relative}
+    .container{
+      max-width:1040px;
+      margin:56px auto;
+      padding:24px;
+      position:relative;
+    }
 
     /* Headshot top-right */
     .headshot{
       position:absolute;
       top:0;
       right:0;
-      width:120px;
-      height:120px;
+      width:130px;
+      height:130px;
       border-radius:50%;
       object-fit:cover;
       border:3px solid var(--sage-light);
       transform:translate(-20px, 20px);
     }
 
+    /* Header */
     header{
       display:flex;
       justify-content:space-between;
@@ -62,23 +69,31 @@
     }
     nav a{margin-left:24px;font-size:14px;color:var(--muted)}
 
+    /* Typography */
     h1{font-size:34px;line-height:1.25;margin:0 0 16px 0}
     h2{font-size:24px;margin:0 0 20px 0}
     h3{font-size:16px;margin:0 0 6px 0}
     p{margin:0 0 16px 0;color:var(--muted)}
 
-    .hero{display:grid;grid-template-columns:1.6fr 1fr;gap:56px;margin-bottom:72px}
-    .hero-accent{padding-left:20px;border-left:3px solid var(--sage)}
+    /* Hero */
+    .hero{
+      display:grid;
+      grid-template-columns:1.6fr 1fr;
+      gap:56px;
+      margin-bottom:72px;
+    }
+    .hero-accent{
+      padding-left:20px;
+      border-left:3px solid var(--sage);
+    }
 
-    .card{border:1px solid var(--border);border-radius:12px;padding:24px;background:#fff}
-
+    /* Sections */
     section{margin-bottom:72px}
 
+    /* Work items */
     .work-list{display:grid;gap:20px}
     .work-item{padding:20px 0;border-bottom:1px solid var(--border)}
     .work-item:last-child{border-bottom:none}
-
-    .resume{display:grid;grid-template-columns:1fr 1fr;gap:40px}
 
     /* Photography grid */
     .photo-grid{
@@ -94,15 +109,33 @@
       object-fit:cover;
     }
 
-    footer{padding-top:32px;border-top:1px solid var(--border);font-size:13px;color:var(--muted)}
+    /* Resume */
+    .resume{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:40px;
+    }
 
-    @media(max-width:900px){.hero{grid-template-columns:1fr}.resume{grid-template-columns:1fr}}
+    /* Footer */
+    footer{
+      padding-top:32px;
+      border-top:1px solid var(--border);
+      font-size:13px;
+      color:var(--muted);
+    }
+
+    /* Responsive */
+    @media(max-width:900px){
+      .hero{grid-template-columns:1fr}
+      .resume{grid-template-columns:1fr}
+      .headshot{width:100px;height:100px}
+    }
   </style>
 </head>
+
 <body>
   <div class="container">
 
-    <!-- Add your headshot here -->
     <img src="photos/headshot.jpg" alt="Headshot of Josephine Huddleston" class="headshot" />
 
     <header>
@@ -130,15 +163,31 @@
       </div>
       <div class="hero-accent">
         <p><strong>Focus areas</strong></p>
-        <p>Digital asset management · Social media coordination · Event communications...</p>
+        <p>Digital asset management · Social media coordination · Event communications · Cross-functional project support...</p>
+      </div>
+    </section>
+
+    <section id="work">
+      <h2>Selected Work</h2>
+      <div class="work-list">
+        <div class="work-item">
+          <h3>Fruits of Faith Gala — Capital Campaign</h3>
+          <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
+          <p>Campaign communications and digital promotion for a large-scale fundraising gala...</p>
+          <ul>
+            <li>Coordinated digital content across website, email, and social media</li>
+            <li>Supported visual storytelling and event branding</li>
+            <li>Aligned messaging with leadership and finance teams</li>
+          </ul>
+        </div>
       </div>
     </section>
 
     <section id="photography">
       <h2>Film Photography</h2>
-      <p style="max-width:720px;color:var(--muted);font-size:14px">A small selection...</p>
+      <p style="max-width:720px;color:var(--muted);font-size:14px">A small selection of analog photography...</p>
+      <p style="font-size:13px;color:var(--muted);margin-top:16px;margin-bottom:12px">All images shot on Kodak Ultramax 400.</p>
 
-      <!-- FIXED IMAGE PATH EXAMPLES -->
       <div class="photo-grid">
         <img src="photos/photo1.jpg" alt="Film photo 1" />
         <img src="photos/photo2.jpg" alt="Film photo 2" />
@@ -146,19 +195,123 @@
       </div>
     </section>
 
+    <section id="experience">
+      <h2>Professional Experience</h2>
+      <div class="work-list">
+        <div class="work-item">
+          <h3>Associate Category Program Manager — Digital Asset Management</h3>
+          <div class="work-meta">Whole Foods Market · Austin, TX</div>
+          <ul>
+            <li>Maintain and deploy large-scale digital asset libraries</li>
+            <li>Coordinate product photography and logistics</li>
+            <li>Partner with merchandising, marketing, brand teams</li>
+            <li>Support digital venue screens and content transitions</li>
+          </ul>
+        </div>
+        <div class="work-item">
+          <h3>Payment Risk Management Specialist</h3>
+          <div class="work-meta">H-E-B Grocery</div>
+          <ul>
+            <li>Analyzed transactional data across 200+ locations</li>
+            <li>Produced weekly and monthly reports</li>
+            <li>Improved fraud prevention workflows</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="resume">
+      <h2>Resume</h2>
+      <p style="max-width:720px;color:var(--muted)">A detailed overview of my professional background is available in PDF format.</p>
+      <p style="margin-top:24px">
+        <a href="Josephine_s_Resume.pdf" target="_blank">Download Resume (PDF)</a>
+      </p>
+    </section>
+
+    <section id="skills">
+      <h2>Skills & Tools</h2>
+      <p><strong>Digital & Technical</strong></p>
+      <p>Digital Asset Management · Excel · Project Management Tools · Salesforce · Slack · Adobe Creative Suite · Basic HTML/CSS</p>
+
+      <p><strong>Languages & Certifications</strong></p>
+      <p>English (Fluent) · German (Advanced) · Spanish (Intermediate)<br>Google Ads Certified · Responsive Classroom</p>
+    </section>
+
+    <section id="leadership">
+      <h2>Leadership & Community Involvement</h2>
+      <div class="work-list">
+        <div class="work-item">
+          <h3>Vice Chair — Media & Communications</h3>
+          <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
+          <ul>
+            <li>Lead communications strategy for fundraising campaigns</li>
+            <li>Coordinate messaging across teams</li>
+            <li>Strengthen engagement through digital outreach</li>
+          </ul>
+        </div>
+
+        <div class="work-item">
+          <h3>President & Social Media Director</h3>
+          <div class="work-meta">Collegiate Entrepreneurs’ Organization (UIW)</div>
+          <ul>
+            <li>Increased engagement by 35%</li>
+            <li>Planned workshops and networking events</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="interests">
+      <h2>Personal Interests</h2>
+      <div class="work-list" style="gap:28px;margin-top:24px">
+        <div class="work-item" style="border-bottom:none;padding:0">
+          <h3 style="color:var(--sage-dark)">Film Photography</h3>
+          <p>Practice in analog photography with an emphasis on composition and framing.</p>
+        </div>
+        <div class="work-item" style="border-bottom:none;padding:0">
+          <h3 style="color:var(--sage-dark)">Baking & Process Craft</h3>
+          <p>Precision and iteration mirror structured workflows.</p>
+        </div>
+        <div class="work-item" style="border-bottom:none;padding:0">
+          <h3 style="color:var(--sage-dark)">Gardening & Sustainability</h3>
+          <p>Seasonal planning reinforces systems-based thinking.</p>
+        </div>
+        <div class="work-item" style="border-bottom:none;padding:0">
+          <h3 style="color:var(--sage-dark)">Floral Design (Certification)</h3>
+          <p>Experience translating direction into cohesive arrangements.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a><br>
+         Phone: 979-253-3523</p>
+    </section>
+
+    <footer>
+      © Josephine Huddleston · Built as a static GitHub Pages portfolio
+    </footer>
+
   </div>
 
 <script>
   const sections=document.querySelectorAll('section');
   const navLinks=document.querySelectorAll('nav a');
+
   window.addEventListener('scroll',()=>{
     let current='';
-    sections.forEach(s=>{if(pageYOffset>=s.offsetTop-120) current=s.getAttribute('id')});
-    navLinks.forEach(l=>{
-      l.style.fontWeight='400';
-      if(l.getAttribute('href')===`#${current}`) l.style.fontWeight='600';
+    sections.forEach(section=>{
+      const sectionTop=section.offsetTop-120;
+      if(pageYOffset>=sectionTop){current=section.getAttribute('id');}
+    });
+
+    navLinks.forEach(link=>{
+      link.style.fontWeight='400';
+      if(link.getAttribute('href')===`#${current}`){link.style.fontWeight='600';}
     });
   });
 </script>
+
 </body>
 </html>
