--- a/index.html
+++ b/index.html
@@ -20,124 +20,52 @@
       --sage-light:#CBD5C0;
       --sage-xlight:#DFE6DA;
     }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:Inter,system-ui;background:var(--bg);color:var(--text);line-height:1.65;}
+    a{color:var(--sage-dark);text-decoration:none}
+    a:hover{text-decoration:underline}
+    .container{max-width:1100px;margin:56px auto;padding:24px}
 
-    *{box-sizing:border-box;}
+    /* Headshot */
+    .headshot{position:absolute;top:24px;right:24px;width:120px;height:120px;border-radius:50%;object-fit:cover;border:3px solid var(--sage-light);}
 
-    body{
-      margin:0;
-      font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-      background:var(--bg);
-      color:var(--text);
-      line-height:1.65;
-    }
-
-    .container{
-      max-width:1040px;
-      margin:56px auto;
-      padding:24px;
-      position:relative;
-    }
-
-    /* Headshot top-right */
-    .headshot{
-      position:absolute;
-      top:0;
-      right:0;
-      width:130px;
-      height:130px;
-      border-radius:50%;
-      object-fit:cover;
-      border:3px solid var(--sage-light);
-      transform:translate(-20px, 20px);
-    }
-
-    /* Header */
-    header{
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      padding-bottom:24px;
-      border-bottom:1px solid var(--border);
-      margin-bottom:48px;
-    }
-    .brand{display:flex;gap:16px;align-items:center}
-    .logo{
-      width:52px;height:52px;border-radius:10px;
-      border:1px solid var(--sage-light);
-      display:flex;align-items:center;justify-content:center;
-      font-weight:700;color:var(--sage-dark)
-    }
+    header{display:flex;justify-content:space-between;align-items:center;padding-bottom:24px;border-bottom:1px solid var(--border);margin-bottom:48px;}
     nav a{margin-left:24px;font-size:14px;color:var(--muted)}
 
-    /* Typography */
-    h1{font-size:34px;line-height:1.25;margin:0 0 16px 0}
-    h2{font-size:24px;margin:0 0 20px 0}
-    h3{font-size:16px;margin:0 0 6px 0}
+    h1{font-size:36px;margin:0 0 18px 0;font-weight:700;}
+    h2{font-size:26px;margin:0 0 20px 0}
+    h3{font-size:18px;margin:0 0 6px 0;font-weight:600}
     p{margin:0 0 16px 0;color:var(--muted)}
 
-    /* Hero */
-    .hero{
-      display:grid;
-      grid-template-columns:1.6fr 1fr;
-      gap:56px;
-      margin-bottom:72px;
-    }
-    .hero-accent{
-      padding-left:20px;
-      border-left:3px solid var(--sage);
-    }
+    .hero{display:grid;grid-template-columns:1.6fr 1fr;gap:56px;margin-bottom:72px}
+    .hero-accent{padding-left:20px;border-left:3px solid var(--sage)}
 
-    /* Sections */
+    .card{border:1px solid var(--border);border-radius:12px;padding:24px;background:#fff}
+
     section{margin-bottom:72px}
 
-    /* Work items */
     .work-list{display:grid;gap:20px}
     .work-item{padding:20px 0;border-bottom:1px solid var(--border)}
     .work-item:last-child{border-bottom:none}
+    .work-meta{font-size:13px;color:var(--sage-dark);margin-bottom:6px}
 
-    /* Photography grid */
-    .photo-grid{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-      gap:16px;
-      margin-top:24px;
-    }
-    .photo-grid img{
-      width:100%;
-      border-radius:12px;
-      border:1px solid var(--border);
-      object-fit:cover;
-    }
+    /* Photo grid */
+    .photo-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:20px;margin-top:24px;}
+    .photo-grid img{width:100%;height:260px;object-fit:cover;border-radius:10px;border:1px solid var(--border);}
 
-    /* Resume */
-    .resume{
-      display:grid;
-      grid-template-columns:1fr 1fr;
-      gap:40px;
-    }
+    .resume{display:grid;grid-template-columns:1fr 1fr;gap:40px}
+    ul{margin:8px 0 0 18px;color:var(--muted)}
 
-    /* Footer */
-    footer{
-      padding-top:32px;
-      border-top:1px solid var(--border);
-      font-size:13px;
-      color:var(--muted);
-    }
+    footer{padding-top:32px;border-top:1px solid var(--border);font-size:13px;color:var(--muted);margin-top:60px;}
 
-    /* Responsive */
-    @media(max-width:900px){
-      .hero{grid-template-columns:1fr}
-      .resume{grid-template-columns:1fr}
-      .headshot{width:100px;height:100px}
-    }
+    @media(max-width:900px){.hero{grid-template-columns:1fr}.resume{grid-template-columns:1fr}.headshot{display:none}}
   </style>
 </head>
-
 <body>
+
+  <img src="photos/headshot.jpg" alt="Headshot" class="headshot" />
+
   <div class="container">
-
-    <img src="photos/headshot.jpg" alt="Headshot of Josephine Huddleston" class="headshot" />
-
     <header>
       <div class="brand">
         <div class="logo">JH</div>
@@ -159,11 +87,11 @@
     <section class="hero">
       <div>
         <h1>Clear, reliable digital communication that supports people, programs, and long-term growth</h1>
-        <p>I work at the intersection of digital marketing, asset management, and project coordination...</p>
+        <p>I work at the intersection of digital marketing, asset management, and project coordination.</p>
       </div>
       <div class="hero-accent">
         <p><strong>Focus areas</strong></p>
-        <p>Digital asset management · Social media coordination · Event communications · Cross-functional project support...</p>
+        <p>Digital asset management · Social media coordination · Event communications · Project support · Retail & nonprofit marketing</p>
       </div>
     </section>
 
@@ -173,11 +101,11 @@
         <div class="work-item">
           <h3>Fruits of Faith Gala — Capital Campaign</h3>
           <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
-          <p>Campaign communications and digital promotion for a large-scale fundraising gala...</p>
+          <p>Campaign communications and digital promotion for a large-scale fundraising gala.</p>
           <ul>
-            <li>Coordinated digital content across website, email, and social media</li>
+            <li>Coordinated digital content across channels</li>
             <li>Supported visual storytelling and event branding</li>
-            <li>Aligned messaging with leadership and finance teams</li>
+            <li>Aligned messaging with leadership teams</li>
           </ul>
         </div>
       </div>
@@ -185,13 +113,16 @@
 
     <section id="photography">
       <h2>Film Photography</h2>
-      <p style="max-width:720px;color:var(--muted);font-size:14px">A small selection of analog photography...</p>
-      <p style="font-size:13px;color:var(--muted);margin-top:16px;margin-bottom:12px">All images shot on Kodak Ultramax 400.</p>
+      <p>A small selection of analog photography focused on composition, light, and texture.</p>
+      <p style="font-size:13px;color:var(--muted);margin-top:12px">All images shot on Kodak Ultramax 400.</p>
 
       <div class="photo-grid">
-        <img src="photos/photo1.jpg" alt="Film photo 1" />
-        <img src="photos/photo2.jpg" alt="Film photo 2" />
-        <img src="photos/photo3.jpg" alt="Film photo 3" />
+        <img src="photos/photo1.jpg" alt="Film sample" />
+        <img src="photos/photo2.jpg" alt="Film sample" />
+        <img src="photos/photo3.jpg" alt="Film sample" />
+        <img src="photos/photo4.jpg" alt="Film sample" />
+        <img src="photos/photo5.jpg" alt="Film sample" />
+        <img src="photos/photo6.jpg" alt="Film sample" />
       </div>
     </section>
 
@@ -203,11 +134,12 @@
           <div class="work-meta">Whole Foods Market · Austin, TX</div>
           <ul>
             <li>Maintain and deploy large-scale digital asset libraries</li>
-            <li>Coordinate product photography and logistics</li>
-            <li>Partner with merchandising, marketing, brand teams</li>
-            <li>Support digital venue screens and content transitions</li>
+            <li>Coordinate photography and studio schedules</li>
+            <li>Partner with merchandising and brand teams</li>
+            <li>Support quarterly content transitions</li>
           </ul>
         </div>
+
         <div class="work-item">
           <h3>Payment Risk Management Specialist</h3>
           <div class="work-meta">H-E-B Grocery</div>
@@ -222,19 +154,17 @@
 
     <section id="resume">
       <h2>Resume</h2>
-      <p style="max-width:720px;color:var(--muted)">A detailed overview of my professional background is available in PDF format.</p>
-      <p style="margin-top:24px">
-        <a href="Josephine_s_Resume.pdf" target="_blank">Download Resume (PDF)</a>
-      </p>
+      <p>Download a detailed overview of experience and skills.</p>
+      <p style="margin-top:24px"><a href="Josephine_s_Resume.pdf" target="_blank">Download Resume (PDF)</a></p>
     </section>
 
     <section id="skills">
       <h2>Skills & Tools</h2>
       <p><strong>Digital & Technical</strong></p>
-      <p>Digital Asset Management · Excel · Project Management Tools · Salesforce · Slack · Adobe Creative Suite · Basic HTML/CSS</p>
+      <p>Digital Asset Management · Excel (Advanced) · Project Management Tools · Salesforce · Social Media Strategy · Photography Coordination · Adobe Creative Suite · HTML/CSS</p>
 
       <p><strong>Languages & Certifications</strong></p>
-      <p>English (Fluent) · German (Advanced) · Spanish (Intermediate)<br>Google Ads Certified · Responsive Classroom</p>
+      <p>English (Fluent) · German (Advanced) · Spanish (Intermediate)</p>
     </section>
 
     <section id="leadership">
@@ -244,74 +174,32 @@
           <h3>Vice Chair — Media & Communications</h3>
           <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
           <ul>
-            <li>Lead communications strategy for fundraising campaigns</li>
+            <li>Lead communications strategy</li>
             <li>Coordinate messaging across teams</li>
-            <li>Strengthen engagement through digital outreach</li>
+            <li>Strengthen parish engagement</li>
           </ul>
         </div>
 
         <div class="work-item">
           <h3>President & Social Media Director</h3>
-          <div class="work-meta">Collegiate Entrepreneurs’ Organization (UIW)</div>
+          <div class="work-meta">UIW</div>
           <ul>
-            <li>Increased engagement by 35%</li>
-            <li>Planned workshops and networking events</li>
+            <li>Increased social engagement by 35%</li>
+            <li>Planned workshops and events</li>
           </ul>
-        </div>
-      </div>
-    </section>
-
-    <section id="interests">
-      <h2>Personal Interests</h2>
-      <div class="work-list" style="gap:28px;margin-top:24px">
-        <div class="work-item" style="border-bottom:none;padding:0">
-          <h3 style="color:var(--sage-dark)">Film Photography</h3>
-          <p>Practice in analog photography with an emphasis on composition and framing.</p>
-        </div>
-        <div class="work-item" style="border-bottom:none;padding:0">
-          <h3 style="color:var(--sage-dark)">Baking & Process Craft</h3>
-          <p>Precision and iteration mirror structured workflows.</p>
-        </div>
-        <div class="work-item" style="border-bottom:none;padding:0">
-          <h3 style="color:var(--sage-dark)">Gardening & Sustainability</h3>
-          <p>Seasonal planning reinforces systems-based thinking.</p>
-        </div>
-        <div class="work-item" style="border-bottom:none;padding:0">
-          <h3 style="color:var(--sage-dark)">Floral Design (Certification)</h3>
-          <p>Experience translating direction into cohesive arrangements.</p>
         </div>
       </div>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a><br>
-         Phone: 979-253-3523</p>
+      <p>Email: <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a></p>
+      <p>Phone: 979‑253‑3523</p>
     </section>
 
     <footer>
-      © Josephine Huddleston · Built as a static GitHub Pages portfolio
+      © Josephine Huddleston · Static GitHub Pages Portfolio
     </footer>
-
   </div>
-
-<script>
-  const sections=document.querySelectorAll('section');
-  const navLinks=document.querySelectorAll('nav a');
-
-  window.addEventListener('scroll',()=>{
-    let current='';
-    sections.forEach(section=>{
-      const sectionTop=section.offsetTop-120;
-      if(pageYOffset>=sectionTop){current=section.getAttribute('id');}
-    });
-
-    navLinks.forEach(link=>{
-      link.style.fontWeight='400';
-      if(link.getAttribute('href')===`#${current}`){link.style.fontWeight='600';}
-    });
-  });
-</script>
-
 </body>
 </html>
