--- a/index.html
+++ b/index.html
@@ -1,205 +1,135 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Josephine Huddleston — Portfolio</title>
-  <meta name="description" content="Clean, modern, detailed professional portfolio for Josephine Huddleston." />
-
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio — Josephine Huddleston</title>
   <style>
-    :root{
-      --bg:#ffffff;
-      --text:#0f172a;
-      --muted:#475569;
-      --border:#e5e7eb;
-      --sage-dark:#758467;
-      --sage:#819171;
-      --sage-soft:#9CAF88;
-      --sage-light:#CBD5C0;
-      --sage-xlight:#DFE6DA;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #222;
+      line-height: 1.6;
     }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,system-ui;background:var(--bg);color:var(--text);line-height:1.65;}
-    a{color:var(--sage-dark);text-decoration:none}
-    a:hover{text-decoration:underline}
-    .container{max-width:1100px;margin:56px auto;padding:24px}
+    header {
+      padding: 40px;
+      text-align: center;
+      background: #f5f5f5;
+    }
+    header img {
+      width: 220px;
+      border-radius: 50%;
+    }
+    nav {
+      background: #222;
+      color: white;
+      padding: 12px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 50px;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 { margin-top: 0; }
 
-    /* Headshot */
-    .headshot{position:absolute;top:24px;right:24px;width:120px;height:120px;border-radius:50%;object-fit:cover;border:3px solid var(--sage-light);}
+    /* Work Section */
+    .work-list { margin-top: 20px; }
+    .work-item { margin-bottom: 40px; }
+    .work-item h3 a { color: #222; text-decoration: none; }
+    .work-meta { font-weight: bold; margin-bottom: 6px; color: #444; }
 
-    header{display:flex;justify-content:space-between;align-items:center;padding-bottom:24px;border-bottom:1px solid var(--border);margin-bottom:48px;}
-    nav a{margin-left:24px;font-size:14px;color:var(--muted)}
-
-    h1{font-size:36px;margin:0 0 18px 0;font-weight:700;}
-    h2{font-size:26px;margin:0 0 20px 0}
-    h3{font-size:18px;margin:0 0 6px 0;font-weight:600}
-    p{margin:0 0 16px 0;color:var(--muted)}
-
-    .hero{display:grid;grid-template-columns:1.6fr 1fr;gap:56px;margin-bottom:72px}
-    .hero-accent{padding-left:20px;border-left:3px solid var(--sage)}
-
-    .card{border:1px solid var(--border);border-radius:12px;padding:24px;background:#fff}
-
-    section{margin-bottom:72px}
-
-    .work-list{display:grid;gap:20px}
-    .work-item{padding:20px 0;border-bottom:1px solid var(--border)}
-    .work-item:last-child{border-bottom:none}
-    .work-meta{font-size:13px;color:var(--sage-dark);margin-bottom:6px}
-
-    /* Photo grid */
-    .photo-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:20px;margin-top:24px;}
-    .photo-grid img{width:100%;height:260px;object-fit:cover;border-radius:10px;border:1px solid var(--border);}
-
-    .resume{display:grid;grid-template-columns:1fr 1fr;gap:40px}
-    ul{margin:8px 0 0 18px;color:var(--muted)}
-
-    footer{padding-top:32px;border-top:1px solid var(--border);font-size:13px;color:var(--muted);margin-top:60px;}
-
-    @media(max-width:900px){.hero{grid-template-columns:1fr}.resume{grid-template-columns:1fr}.headshot{display:none}}
+    /* Film Photo Grid */
+    .film-photos {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 25px;
+    }
+    .film-photos img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
 
-  <img src="photos/headshot.jpg" alt="Headshot" class="headshot" />
+<nav>
+  <a href="#about">About</a>
+  <a href="#work">Work</a>
+  <a href="#film">Film</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <div class="container">
-    <header>
-      <div class="brand">
-        <div class="logo">JH</div>
-        <div>
-          <div style="font-weight:700">Josephine Huddleston</div>
-          <div style="font-size:13px;color:var(--muted)">Digital Marketing & Program Management</div>
-        </div>
-      </div>
-      <nav>
-        <a href="#work">Work</a>
-        <a href="#experience">Experience</a>
-        <a href="#resume">Resume</a>
-        <a href="#skills">Skills</a>
-        <a href="#leadership">Leadership</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
+<header>
+  <img src="IMG_4783.JPG" alt="Headshot" />
+  <h1>Josephine Huddleston</h1>
+  <p>Communications · Digital Strategy · Media</p>
+</header>
 
-    <section class="hero">
-      <div>
-        <h1>Clear, reliable digital communication that supports people, programs, and long-term growth</h1>
-        <p>I work at the intersection of digital marketing, asset management, and project coordination.</p>
-      </div>
-      <div class="hero-accent">
-        <p><strong>Focus areas</strong></p>
-        <p>Digital asset management · Social media coordination · Event communications · Project support · Retail & nonprofit marketing</p>
-      </div>
-    </section>
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    I am a communications and media-focused creative specializing in strategy, writing,
+    branding, and visual storytelling. I combine my background in public relations,
+    digital content, and photography to help organizations communicate clearly and
+    authentically.
+  </p>
+</section>
 
-    <section id="work">
-      <h2>Selected Work</h2>
-      <div class="work-list">
-        <div class="work-item">
-          <h3>Fruits of Faith Gala — Capital Campaign</h3>
-          <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
-          <p>Campaign communications and digital promotion for a large-scale fundraising gala.</p>
-          <ul>
-            <li>Coordinated digital content across channels</li>
-            <li>Supported visual storytelling and event branding</li>
-            <li>Aligned messaging with leadership teams</li>
-          </ul>
-        </div>
-      </div>
-    </section>
+<section id="work">
+  <h2>Selected Work</h2>
 
-    <section id="photography">
-      <h2>Film Photography</h2>
-      <p>A small selection of analog photography focused on composition, light, and texture.</p>
-      <p style="font-size:13px;color:var(--muted);margin-top:12px">All images shot on Kodak Ultramax 400.</p>
+  <div class="work-list">
 
-      <div class="photo-grid">
-        <img src="photos/photo1.jpg" alt="Film sample" />
-        <img src="photos/photo2.jpg" alt="Film sample" />
-        <img src="photos/photo3.jpg" alt="Film sample" />
-        <img src="photos/photo4.jpg" alt="Film sample" />
-        <img src="photos/photo5.jpg" alt="Film sample" />
-        <img src="photos/photo6.jpg" alt="Film sample" />
-      </div>
-    </section>
+    <div class="work-item">
+      <h3><a href="https://www.sainteliaschurch.org/post/fruits-of-faith-gala-a-mediterranean-soir%C3%A9e-to-support-the-st-elias-capital-campaign" target="_blank" rel="noopener">Fruits of Faith Gala — Capital Campaign</a></h3>
+      <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
+      <p>Campaign communications and digital media support for a major fundraising gala.</p>
+      <ul>
+        <li>Coordinated storytelling and event-brand alignment</li>
+        <li>Developed promotional content</li>
+        <li>Assisted with message strategy and community engagement</li>
+      </ul>
+    </div>
 
-    <section id="experience">
-      <h2>Professional Experience</h2>
-      <div class="work-list">
-        <div class="work-item">
-          <h3>Associate Category Program Manager — Digital Asset Management</h3>
-          <div class="work-meta">Whole Foods Market · Austin, TX</div>
-          <ul>
-            <li>Maintain and deploy large-scale digital asset libraries</li>
-            <li>Coordinate photography and studio schedules</li>
-            <li>Partner with merchandising and brand teams</li>
-            <li>Support quarterly content transitions</li>
-          </ul>
-        </div>
+    <div class="work-item">
+      <h3><a href="https://www.instagram.com/uiw_ceo/?hl=en" target="_blank" rel="noopener">President & Social Media Director — UIW CEO</a></h3>
+      <div class="work-meta">Collegiate Entrepreneurs’ Organization</div>
+      <p>Led chapter communications, brand strategy, and event promotion.</p>
+      <ul>
+        <li>Increased social media engagement by 35%</li>
+        <li>Expanded membership by 20%</li>
+        <li>Coordinated workshops and guest speakers</li>
+      </ul>
+    </div>
 
-        <div class="work-item">
-          <h3>Payment Risk Management Specialist</h3>
-          <div class="work-meta">H-E-B Grocery</div>
-          <ul>
-            <li>Analyzed transactional data across 200+ locations</li>
-            <li>Produced weekly and monthly reports</li>
-            <li>Improved fraud prevention workflows</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section id="resume">
-      <h2>Resume</h2>
-      <p>Download a detailed overview of experience and skills.</p>
-      <p style="margin-top:24px"><a href="Josephine_s_Resume.pdf" target="_blank">Download Resume (PDF)</a></p>
-    </section>
-
-    <section id="skills">
-      <h2>Skills & Tools</h2>
-      <p><strong>Digital & Technical</strong></p>
-      <p>Digital Asset Management · Excel (Advanced) · Project Management Tools · Salesforce · Social Media Strategy · Photography Coordination · Adobe Creative Suite · HTML/CSS</p>
-
-      <p><strong>Languages & Certifications</strong></p>
-      <p>English (Fluent) · German (Advanced) · Spanish (Intermediate)</p>
-    </section>
-
-    <section id="leadership">
-      <h2>Leadership & Community Involvement</h2>
-      <div class="work-list">
-        <div class="work-item">
-          <h3>Vice Chair — Media & Communications</h3>
-          <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
-          <ul>
-            <li>Lead communications strategy</li>
-            <li>Coordinate messaging across teams</li>
-            <li>Strengthen parish engagement</li>
-          </ul>
-        </div>
-
-        <div class="work-item">
-          <h3>President & Social Media Director</h3>
-          <div class="work-meta">UIW</div>
-          <ul>
-            <li>Increased social engagement by 35%</li>
-            <li>Planned workshops and events</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a></p>
-      <p>Phone: 979‑253‑3523</p>
-    </section>
-
-    <footer>
-      © Josephine Huddleston · Static GitHub Pages Portfolio
-    </footer>
   </div>
+</section>
+
+<section id="film">
+  <h2>Film Photography</h2>
+  <p>A selection of 35mm film work.</p>
+
+  <div class="film-photos">
+    <img src="photo1.jpeg" alt="Film Photo 1" />
+    <img src="photo2.jpeg" alt="Film Photo 2" />
+    <img src="photo3.jpeg" alt="Film Photo 3" />
+  </div>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:jshuddleston@gmail.com">jshuddleston@gmail.com</a></p>
+</section>
+
 </body>
 </html>
