--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
   <p>Communications · Digital Strategy · Media</p>
 </header>
 
+<section id="professional">
+  <h2>Professional Work Experience</h2>
+  <p>[Add your detailed work experience here — job titles, descriptions, accomplishments.]</p>
+</section>
+
+<section id="resume">
+  <h2>Resume</h2>
+  <p><a href="resume.pdf" target="_blank">Download Resume</a></p>
+</section>
+
 <section id="about">
   <h2>About Me</h2>
   <p>
@@ -128,7 +138,7 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:jshuddleston@gmail.com">jshuddleston@gmail.com</a></p>
+  <p>979-253-3523 | <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a> | Austin, TX | <a href="https://www.linkedin.com/in/josephine-huddleston" target="_blank">linkedin.com/in/josephine-huddleston</a></p>
 </section>
 
 </body>
