--- a/index.html
+++ b/index.html
@@ -141,5 +141,47 @@
   <p>979-253-3523 | <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a> | Austin, TX | <a href="https://www.linkedin.com/in/josephine-huddleston" target="_blank">linkedin.com/in/josephine-huddleston</a></p>
 </section>
 
+
+<section id="education">
+  <h2>Education</h2>
+  <p><strong>Texas A&M University — College Station, TX</strong><br>Master of Business Administration (Dec 2026)</p>
+  <p><strong>The University of the Incarnate Word — San Antonio, TX</strong><br>Bachelor of Business Administration, Marketing (May 2024)<br>Minor in Corporate Communications</p>
+</section>
+
+<section id="leadership">
+  <h2>Leadership & Community Involvement</h2>
+  <h3>St. Elias Antiochian Orthodox Church — Austin, TX</h3>
+  <p><strong>Vice Chair of Media and Communications</strong> (Jan 2025 – Present)</p>
+  <ul>
+    <li>Led strategic planning and communication efforts to support fundraising and parish engagement.</li>
+    <li>Coordinated cross-team messaging for fundraising, design, finance, and communications.</li>
+    <li>Supported leadership with initiative management and documentation.</li>
+    <li>Strengthened community relationships to inspire involvement.</li>
+  </ul>
+
+  <h3>Collegiate Entrepreneurs' Organization — San Antonio, TX</h3>
+  <p><strong>President & Social Media Director</strong> (Jan 2022 – May 2024)</p>
+  <ul>
+    <li>Increased social media engagement by 35% and membership by 20%.</li>
+    <li>Coordinated workshops and networking events with industry leaders.</li>
+    <li>Streamlined chapter initiatives to support organizational goals.</li>
+  </ul>
+
+  <h3>UIW Sustainability Organization — San Antonio, TX</h3>
+  <p><strong>Vice President</strong> (Aug 2021 – May 2024)</p>
+  <ul>
+    <li>Organized sustainability campaigns and educational programs.</li>
+    <li>Presented sustainable retail strategies leading to measurable improvements.</li>
+    <li>Promoted environmental awareness across campus through events and outreach.</li>
+  </ul>
+</section>
+
+<section id="skills">
+  <h2>Skills</h2>
+  <p><strong>Technical / Computer Skills:</strong><br>Advanced Excel · Digital Asset Management · Project Management Tools · Salesforce · Slack · Social Media Strategy · Photography & Content Coordination · Data Management · Adobe Creative Suite · CRM Tools · SQL · HTML/CSS</p>
+  <p><strong>Languages:</strong><br>Fluent English · Advanced German · Intermediate Spanish</p>
+  <p><strong>Certifications:</strong><br>Google Ads Certified · Ethics & Integrity in Ministry · Responsive Classroom</p>
+</section>
+
 </body>
 </html>
