--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
   <a href="#about">About</a>
   <a href="#work">Work</a>
   <a href="#film">Film</a>
+  <a href="#professional">Experience</a>
+  <a href="#leadership">Leadership</a>
+  <a href="#education">Education</a>
+  <a href="#skills">Skills</a>
   <a href="#contact">Contact</a>
 </nav>
 
@@ -75,60 +79,30 @@
   <p>Communications · Digital Strategy · Media</p>
 </header>
 
-<section id="professional">
-  <h2>Professional Work Experience</h2>
-  <p>[Add your detailed work experience here — job titles, descriptions, accomplishments.]</p>
-</section>
-
-<section id="resume">
-  <h2>Resume</h2>
-  <p><a href="resume.pdf" target="_blank">Download Resume</a></p>
-</section>
-
 <section id="about">
   <h2>About Me</h2>
-  <p>
-    I am a communications and media-focused creative specializing in strategy, writing,
-    branding, and visual storytelling. I combine my background in public relations,
-    digital content, and photography to help organizations communicate clearly and
-    authentically.
-  </p>
+  <p>I am a communications and media-focused creative specializing in strategy, writing, branding, and visual storytelling. I combine my background in public relations, digital content, and photography to help organizations communicate clearly and authentically.</p>
 </section>
 
 <section id="work">
   <h2>Selected Work</h2>
-
   <div class="work-list">
-
     <div class="work-item">
-      <h3><a href="https://www.sainteliaschurch.org/post/fruits-of-faith-gala-a-mediterranean-soir%C3%A9e-to-support-the-st-elias-capital-campaign" target="_blank" rel="noopener">Fruits of Faith Gala — Capital Campaign</a></h3>
+      <h3><a href="https://www.sainteliaschurch.org/post/fruits-of-faith-gala-a-mediterranean-soir%C3%A9e-to-support-the-st-elias-capital-campaign" target="_blank">Fruits of Faith Gala — Capital Campaign</a></h3>
       <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
       <p>Campaign communications and digital media support for a major fundraising gala.</p>
-      <ul>
-        <li>Coordinated storytelling and event-brand alignment</li>
-        <li>Developed promotional content</li>
-        <li>Assisted with message strategy and community engagement</li>
-      </ul>
     </div>
-
     <div class="work-item">
-      <h3><a href="https://www.instagram.com/uiw_ceo/?hl=en" target="_blank" rel="noopener">President & Social Media Director — UIW CEO</a></h3>
+      <h3><a href="https://www.instagram.com/uiw_ceo/?hl=en" target="_blank">President & Social Media Director — UIW CEO</a></h3>
       <div class="work-meta">Collegiate Entrepreneurs’ Organization</div>
       <p>Led chapter communications, brand strategy, and event promotion.</p>
-      <ul>
-        <li>Increased social media engagement by 35%</li>
-        <li>Expanded membership by 20%</li>
-        <li>Coordinated workshops and guest speakers</li>
-      </ul>
     </div>
-
   </div>
 </section>
 
 <section id="film">
   <h2>Film Photography</h2>
   <p>A selection of 35mm film work.</p>
-
   <div class="film-photos">
     <img src="photo1.jpeg" alt="Film Photo 1" />
     <img src="photo2.jpeg" alt="Film Photo 2" />
@@ -136,51 +110,128 @@
   </div>
 </section>
 
-<section id="contact">
-  <h2>Contact</h2>
-  <p>979-253-3523 | <a href="mailto:josephinelhuddleston@gmail.com">josephinelhuddleston@gmail.com</a> | Austin, TX | <a href="https://www.linkedin.com/in/josephine-huddleston" target="_blank">linkedin.com/in/josephine-huddleston</a></p>
-</section>
+<section id="professional">
+  <h2>Professional Work Experience</h2>
 
+  <div class="work-item">
+    <h3>Associate Category Program Manager, Digital Asset Management</h3>
+    <div class="work-meta">Whole Foods Market · Austin, TX · Jan 2025 – Present</div>
+    <ul>
+      <li>Manage creation, accuracy, and on-time deployment of large-scale promotional assets using proprietary DAM systems, ensuring alignment with national marketing strategy.</li>
+      <li>Coordinate product photography workflows — developing shot lists, tracking samples, scheduling studio timelines, and collaborating with photographers and project managers.</li>
+      <li>Lead supplier-facing communication, fostering strong partnerships across merchandising, marketing, and branded vendors.</li>
+      <li>Execute monthly and evergreen content deliverables, maintaining consistent quality standards and supporting cross-functional business needs.</li>
+      <li>Provide end-to-end support for digital venue screens in all stores, including quarterly menu flips, troubleshooting, and feature updates.</li>
+    </ul>
+  </div>
 
-<section id="education">
-  <h2>Education</h2>
-  <p><strong>Texas A&M University — College Station, TX</strong><br>Master of Business Administration (Dec 2026)</p>
-  <p><strong>The University of the Incarnate Word — San Antonio, TX</strong><br>Bachelor of Business Administration, Marketing (May 2024)<br>Minor in Corporate Communications</p>
+  <div class="work-item">
+    <h3>Pre-K 4 Assistant Teacher</h3>
+    <div class="work-meta">St. Michael’s Catholic Preparatory Academy · Austin, TX · Aug 2024 – Dec 2024</div>
+    <ul>
+      <li>Supported daily classroom operations and assisted in planning and delivering curriculum-aligned activities.</li>
+      <li>Supervised after-school programs and coordinated with auxiliary teams to maintain a safe, structured environment.</li>
+      <li>Tracked student progress, communicated regularly with parents, and contributed to a positive learning environment.</li>
+      <li>Led creative and developmental activities promoting teamwork, curiosity, and social growth.</li>
+    </ul>
+  </div>
+
+  <div class="work-item">
+    <h3>Payment Risk Management Specialist</h3>
+    <div class="work-meta">H-E-B Grocery · San Antonio, TX · Aug 2023 – Jul 2024</div>
+    <ul>
+      <li>Analyzed and validated transactional data for 200+ store locations to identify fraudulent activity and reduce financial risk.</li>
+      <li>Produced weekly and monthly financial reports, providing leadership with actionable insights and trend analysis.</li>
+      <li>Improved fraud-prevention workflows by collaborating with cross-department teams.</li>
+      <li>Streamlined tracking processes using Salesforce and Slack for real-time issue resolution.</li>
+    </ul>
+  </div>
+
+  <div class="work-item">
+    <h3>Studio Traffic Coordinator</h3>
+    <div class="work-meta">H-E-B Grocery · San Antonio, TX · Nov 2022 – Aug 2023</div>
+    <ul>
+      <li>Managed merchandising workflows including SKU setup, product documentation, and promotional calendars.</li>
+      <li>Coordinated with photography, advertising, and merchandising teams to ensure timely delivery of digital assets.</li>
+      <li>Improved data-tracking systems using advanced Excel tools, reducing asset errors and increasing operational efficiency.</li>
+      <li>Reviewed promotional materials for brand consistency and alignment with product strategy.</li>
+    </ul>
+  </div>
+
+  <div class="work-item">
+    <h3>Lead Cashier</h3>
+    <div class="work-meta">H-E-B Grocery · Houston, TX · Aug 2019 – Nov 2022</div>
+    <ul>
+      <li>Trained and supervised team members to maintain high service standards.</li>
+      <li>Supported promotional planning by maintaining accurate pricing and inventory oversight.</li>
+      <li>Monitored sales trends and provided recommendations to improve product placement and store flow.</li>
+      <li>Coordinated schedules and resources during high-volume periods to maintain operational smoothness.</li>
+    </ul>
+  </div>
 </section>
 
 <section id="leadership">
   <h2>Leadership & Community Involvement</h2>
-  <h3>St. Elias Antiochian Orthodox Church — Austin, TX</h3>
-  <p><strong>Vice Chair of Media and Communications</strong> (Jan 2025 – Present)</p>
-  <ul>
-    <li>Led strategic planning and communication efforts to support fundraising and parish engagement.</li>
-    <li>Coordinated cross-team messaging for fundraising, design, finance, and communications.</li>
-    <li>Supported leadership with initiative management and documentation.</li>
-    <li>Strengthened community relationships to inspire involvement.</li>
-  </ul>
+  {{LEADERSHIP_CONTENT}}
+</section>
 
-  <h3>Collegiate Entrepreneurs' Organization — San Antonio, TX</h3>
-  <p><strong>President & Social Media Director</strong> (Jan 2022 – May 2024)</p>
-  <ul>
-    <li>Increased social media engagement by 35% and membership by 20%.</li>
-    <li>Coordinated workshops and networking events with industry leaders.</li>
-    <li>Streamlined chapter initiatives to support organizational goals.</li>
-  </ul>
+<section id="education">
+  <h2>Education</h2>
 
-  <h3>UIW Sustainability Organization — San Antonio, TX</h3>
-  <p><strong>Vice President</strong> (Aug 2021 – May 2024)</p>
-  <ul>
-    <li>Organized sustainability campaigns and educational programs.</li>
-    <li>Presented sustainable retail strategies leading to measurable improvements.</li>
-    <li>Promoted environmental awareness across campus through events and outreach.</li>
-  </ul>
+  <div class="work-item">
+    <h3>Master of Business Administration</h3>
+    <div class="work-meta">Texas A&M University · College Station, TX · Expected Dec 2026</div>
+    <p>Focus on strategic management, leadership, and digital business systems.</p>
+  </div>
+
+  <div class="work-item">
+    <h3>Bachelor of Business Administration, Marketing</h3>
+    <div class="work-meta">University of the Incarnate Word · San Antonio, TX · May 2024</div>
+    <p>Minor in Corporate Communications</p>
+  </div>
 </section>
 
 <section id="skills">
   <h2>Skills</h2>
-  <p><strong>Technical / Computer Skills:</strong><br>Advanced Excel · Digital Asset Management · Project Management Tools · Salesforce · Slack · Social Media Strategy · Photography & Content Coordination · Data Management · Adobe Creative Suite · CRM Tools · SQL · HTML/CSS</p>
-  <p><strong>Languages:</strong><br>Fluent English · Advanced German · Intermediate Spanish</p>
-  <p><strong>Certifications:</strong><br>Google Ads Certified · Ethics & Integrity in Ministry · Responsive Classroom</p>
+
+  <h3>Technical & Digital Skills</h3>
+  <ul>
+    <li>Advanced Microsoft Excel (data automation, pivot tables, complex formulas)</li>
+    <li>Digital Asset Management (enterprise-level systems, metadata organization)</li>
+    <li>Project Management Tools (Asana, Monday, Smartsheet)</li>
+    <li>Salesforce (intermediate level workflow and reporting)</li>
+    <li>Slack (cross-team communication workflows)</li>
+    <li>Social Media Marketing & Strategy (campaign planning, analytics)</li>
+    <li>Photography & Content Coordination (studio workflows + 35mm film)</li>
+    <li>Data Management & Quality Assurance</li>
+    <li>Adobe Creative Suite (Photoshop, Lightroom, Illustrator — intermediate)</li>
+    <li>CRM Tools (customer lifecycle tracking, segmentation)</li>
+    <li>Basic SQL (queries, database navigation)</li>
+    <li>Basic HTML/CSS</li>
+  </ul>
+
+  <h3>Languages</h3>
+  <ul>
+    <li>Fluent English</li>
+    <li>Advanced German</li>
+    <li>Intermediate Spanish</li>
+  </ul>
+
+  <h3>Certifications</h3>
+  <ul>
+    <li>Google Ads Certified</li>
+    <li>Ethics & Integrity in Ministry</li>
+    <li>Responsive Classroom</li>
+  </ul>
+</section>
+
+
+
+
+
+<section id="blog">
+  <h2>Insights & Writing</h2>
+  <p>A future space for writing on communications, digital strategy, creative workflows, and professional development.</p>
 </section>
 
 </body>
